--- a/style.scss
+++ b/style.scss
@@ -6,8 +6,130 @@ $White: hsl(0, 0%, 100%); /*main heading, stats*/
 $SlightlyTransparentWhite: hsla(0, 0%, 100%, 0.75); /*main paragraph*/
 $SlightlyTransparentWhite2: hsla(0, 0%, 100%, 0.6); /*stat headings*/
 
+html {
+    box-sizing: border-box;
+}
+
+*, *::after, *::before {
+    box-sizing: border-box;
+}
 
 body {
+    font-family: 'Inter', sans-serif;
+    font-style: normal;
+    font-size: 15px;
+    font-weight: 400;
+    color: $White;
+    background-color: $VeryDarkBlue;
+}
+
+.wrapper {
+    max-width: 1110px;
+    margin: 0 auto;
+    padding: 180px 0;
+}
+
+.card {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 0;
+    background-color: $DarkDesaturatedBlue;
+    border-radius: 10px;
+    .card__text {
+        padding: 78px 0 66px 74px;
+        .card__text-title {
+            font-size: 36px;
+            font-weight: 700;
+            max-width: 378px;
+            margin: 0;
+            margin-bottom: 32px;
+            .card__text-title-accent {
+                color: $SoftViolet;
+            }
+        }
+        .card__text-text {
+            max-width: 346px;
+            line-height: 26px;
+            color: $SlightlyTransparentWhite;
+            margin: 0;
+            margin-bottom: 86px;
+        }
+        .card__text-desc {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            column-gap: 50px;
+            .card__text-desc-card {
+                .card__text-desc-title {
+                    font-size: 24px;
+                    margin: 0;
+                    margin-bottom: 10px;
+                }
+                .card__text-desc-info {
+                    font-family: 'Lexend Deca', sans-serif;
+                    text-transform: uppercase;
+                    font-size: 12px;
+                    color: $SlightlyTransparentWhite2;
+                }
+            }
+        }
+    }
+    .card__img {
+        background-color: $SoftViolet;
+        background-image: url(images/image-header-desktop.jpg);
+        background-blend-mode:multiply;
+        background-size: cover;
+        border-radius: 0 10px 10px 0;
+        overflow: hidden;
+    }
+}
+
+@media screen and (max-width: 932px) {
+    .wrapper {
+        padding: 70px 10px 0 10px;
+    }
+    .card {
+        display: grid;
+        .card__text {
+            grid-column: span 2;
+            padding: 44px 10px 0 10px;
+            .card__text-title {
+                padding: 0 10px;
+                font-size: 24px;
+                text-align: center;
+                margin: 0 auto;
+                margin-bottom: 34px;
+            }
+            .card__text-text {
+                text-align: center;
+                margin: 0 auto;
+                margin-bottom: 50px;
+            }
+            .card__text-desc {
+                align-items: center;
+                .card__text-desc-card {
+                    grid-column: span 3;
+                    margin: 0 auto;
+                    margin-bottom: 34px;
+                }
+            }
+        }
+        .card__img {
+            grid-column: span 2;
+            grid-row-start: -1;
+            background-color: $SoftViolet;
+            background-image: url(images/image-header-mobile.jpg);
+            background-blend-mode:multiply;
+            border-radius: 10px 10px 0 0;
+            overflow: hidden;
+            .card__img-item {
+                padding-top: 73%;
+            }
+        }
+    }
+}
+
+
+/*body {
     background-color: $VeryDarkBlue;
     height: 100%;
     padding-top: 180px;
@@ -83,3 +205,7 @@ body {
 .attribution a { 
     color: hsl(228, 45%, 44%); 
 }
+
+@media screen and (max-width: 1120px) {
+    
+}*/
